# EnigmaMachine

./: main.py  pyproject.toml
src/: main.py
src/enigma/: enigma.py  rotor.py
src/enigma_ui/: enigma_ui.py
